[gd_scene load_steps=4 format=3 uid="uid://bo25b32fsy63x"]

[ext_resource type="Script" path="res://Interface/Pause/pause.gd" id="1_ymuvx"]
[ext_resource type="FontFile" uid="uid://b3bglfvy1nlcn" path="res://Assets/Font/ofont.ru_X Typewriter.ttf" id="2_4whja"]
[ext_resource type="PackedScene" uid="uid://dsvoanrsetrxb" path="res://Interface/Settings/Settings.tscn" id="2_ltg27"]

[node name="Pause" type="Control"]
process_mode = 3
physics_interpolation_mode = 0
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ymuvx")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.235294)

[node name="Pause Menu" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Pause Menu"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Pause Menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Pause Menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Pause Menu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer3" type="MarginContainer" parent="Pause Menu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Pause Menu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Pause Menu/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="continue" type="Button" parent="Pause Menu/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4whja")
text = "Продолжить"

[node name="MarginContainer4" type="MarginContainer" parent="Pause Menu/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="Pause Menu/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="settings" type="Button" parent="Pause Menu/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4whja")
text = "Настройки"

[node name="MarginContainer5" type="MarginContainer" parent="Pause Menu/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="Pause Menu/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="quit" type="Button" parent="Pause Menu/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4whja")
text = "Выход"

[node name="MarginContainer2" type="MarginContainer" parent="Pause Menu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer4" type="MarginContainer" parent="Pause Menu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="Pause Menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Settings" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Settings"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="Settings/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="B_Settings" type="VBoxContainer" parent="Settings/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/VBoxContainer2/B_Settings"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="Settings/VBoxContainer2/B_Settings/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="Settings" parent="Settings/VBoxContainer2/B_Settings/HBoxContainer" instance=ExtResource("2_ltg27")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="MarginContainer" type="MarginContainer" parent="Settings/VBoxContainer2/B_Settings/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Settings/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer3" type="MarginContainer" parent="Settings/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(850, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer3" type="MarginContainer" parent="Settings/VBoxContainer2/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Settings/VBoxContainer2/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Back" type="Button" parent="Settings/VBoxContainer2/HBoxContainer2/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Back"

[node name="MarginContainer2" type="MarginContainer" parent="Settings/VBoxContainer2/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="Settings/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(850, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Settings/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="Pause Menu/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Pause Menu/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer2/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Pause Menu/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer3/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer2/HBoxContainer2/VBoxContainer/MarginContainer/Back" to="." method="_on_back_pressed"]
